# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\OrderController;
 use App\Events\MyEvent;
 
 /*
@@ -21,6 +22,8 @@ Route::post('/login', [AuthController::class, 'login']);
 Route::middleware(['auth:sanctum'],)->group(function () {
     Route::post("/logout", [AuthController::class, "logout"]);
     Route::get("/user", [AuthController::class, "user"]);
+
+    Route::post("/orders", [OrderController::class, "store"])->middleware('role:customer');
 });
 
 Route::get("/status", fn() => response()->json(["status" => "API is running"]));
